jsonschemadsl2ecore.trafo.opt/test/test30/invalidtests/example7.test30
{
	 
	 
	"string":false,
	"object":{},
	"extra":"extra"
}